feat: cron jobs for intallment reminder, also sending stripe url for quick payment | added manual triggers as well for testing

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-serve-static-core": "^0.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.20.0",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.10",
     "nodemon": "^3.1.11",
     "stripe": "^19.3.1"
@@ -40,6 +41,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^24.10.1",
+    "@types/node-cron": "^3.0.11",
     "@types/stripe": "^8.0.416",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
