--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "dev": "nodemon app.js",
+  "build": "tsc -p tsconfig.json && cp app.js dist/app.js",
     "start": "node dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -32,7 +33,9 @@
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.10",
     "nodemon": "^3.1.11",
-    "stripe": "^19.3.1"
+    "stripe": "^19.3.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
@@ -42,8 +45,6 @@
     "@types/mongoose": "^5.11.96",
     "@types/node": "^24.10.1",
     "@types/node-cron": "^3.0.11",
-    "@types/stripe": "^8.0.416",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "@types/stripe": "^8.0.416"
   }
 }
